--- a/schedule.html
+++ b/schedule.html
@@ -2,7 +2,7 @@
 layout: default
 title: Event schedule
 permalink: /schedule/
-image: blue.png
+image: pink.png
 ---
 
 {% include top-section.html %}
