--- a/speakers.html
+++ b/speakers.html
@@ -3,7 +3,7 @@ layout: default
 title: Speakers
 permalink: /speakers/
 modal: all
-image: raspberry.png
+image: blue.png
 ---
 
 {% include top-section.html %}
